# VideoTogether

./: .env.example  .gitignore  LICENSE  NOTICE  Plan.md  README.md  README_zh.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: desktop-packages.yml
apps/desktop/: index.html  package.json  vite.config.mjs  vite.config.mjs.disabled
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.release.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: Dockerfile  package.json
apps/server/scripts/: build-sea.mjs
apps/server/src/: app.ts  index.ts  sea-entry.ts  start-server.ts
apps/server/src/api/: health-routes.ts  media-routes.ts  room-routes.ts  static-routes.ts
apps/server/src/config/: env.ts
apps/server/src/db/: database.ts
apps/server/src/lib/: errors.ts  files.ts  origins.ts
apps/server/src/services/: cleanup-service.ts  media-service.ts  room-service.ts
apps/server/src/sockets/: bootstrap.ts
apps/server/src/types/: models.ts
apps/web/: index.html  package.json  postcss.config.js  tailwind.config.ts  vite.config.ts
apps/web/src/: App.tsx  styles.css
apps/web/src/lib/: hls.ts
infra/: docker-compose.yml
infra/scripts/: package-desktop.mjs  package-desktop.ps1  start-host.ps1  start-ngrok.ps1  stop-host.ps1  sync-version.mjs
