[package]
name = "videoshare-desktop"
version = "0.1.0"
description = "VideoShare desktop shell"
authors = ["ASUS"]
edition = "2021"

[lib]
name = "videoshare_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = [] }

[package.metadata]
app-name = 'VideoShare'

