[package]
name = "VideoTogether"
version = "1.3.4"
description = "VideoTogether desktop shell"
authors = ["ASUS"]
edition = "2021"

[lib]
name = "videoshare_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = [] }
url = "2"
window-vibrancy = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata]
app-name = 'VideoTogether'

